--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
 dependencies = [
     "python-dotenv>=1.0.1",
     "aiogram==2.21",
+    "emoji==2.10.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
