--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "aiogram==2.21",
     "emoji==2.10.1",
     "bleach>=6.1.0",
+    "pillow>=10.2.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
