--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "pillow>=10.2.0",
     "apscheduler>=3.10.4",
 ]
-requires-python = ">=3.11"
+requires-python = "==3.11"
 readme = "README.md"
 license = {text = "MIT"}
 
